[gd_scene load_steps=11 format=3 uid="uid://dphurrbfd380a"]

[ext_resource type="Theme" uid="uid://den0c88qxg2fn" path="res://main_theme.tres" id="1_2j6d7"]
[ext_resource type="Script" uid="uid://b4mr2omo8tyod" path="res://scene/card_ui/card_ui.gd" id="2_vbdtx"]
[ext_resource type="PackedScene" uid="uid://py64ndp06xei" path="res://scene/card_ui/card_visual.tscn" id="3_52ebv"]
[ext_resource type="Script" uid="uid://bebvrhnu8kyej" path="res://scene/card_ui/card_state_machine.gd" id="3_aurxg"]
[ext_resource type="Script" uid="uid://ktdwbvijycni" path="res://scene/card_ui/card_state/card_base_state.gd" id="4_go404"]
[ext_resource type="Script" uid="uid://djilqrcfw5315" path="res://scene/card_ui/card_state/card_clicked_state.gd" id="5_52ebv"]
[ext_resource type="Script" uid="uid://xgs04ff30anu" path="res://scene/card_ui/card_state/card_dragging_state.gd" id="6_1vc4d"]
[ext_resource type="Script" uid="uid://bm05sharyiuer" path="res://scene/card_ui/card_state/card_released_state.gd" id="7_gml6f"]
[ext_resource type="Script" uid="uid://b20ir0r203fbg" path="res://scene/card_ui/card_state/card_aiming_state.gd" id="8_go404"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2j6d7"]
size = Vector2(30, 40)

[node name="CardUI" type="Control"]
custom_minimum_size = Vector2(30, 40)
layout_mode = 3
anchors_preset = 0
offset_right = 30.0
offset_bottom = 40.0
theme = ExtResource("1_2j6d7")
script = ExtResource("2_vbdtx")

[node name="CardVisual" parent="." instance=ExtResource("3_52ebv")]
offset_right = 30.0
offset_bottom = 40.0

[node name="DropPointDetector" type="Area2D" parent="."]
collision_mask = 2
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="DropPointDetector"]
position = Vector2(15, 20)
shape = SubResource("RectangleShape2D_2j6d7")
debug_color = Color(0, 0.595, 0.7, 0.196078)

[node name="CardStateMachine" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("3_aurxg")
initial_state = NodePath("CardBaseState")

[node name="CardBaseState" type="Node" parent="CardStateMachine"]
script = ExtResource("4_go404")

[node name="CardClickedState" type="Node" parent="CardStateMachine"]
script = ExtResource("5_52ebv")

[node name="CardDraggingState" type="Node" parent="CardStateMachine"]
script = ExtResource("6_1vc4d")

[node name="CardReleasedState" type="Node" parent="CardStateMachine"]
script = ExtResource("7_gml6f")

[node name="CardAimingState" type="Node" parent="CardStateMachine"]
script = ExtResource("8_go404")

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
